<resources>
    <string name="app_name">Swift</string>
    <string name="loginWithFb">Continue with Facebook</string>
    <string name="continueWithEmail">Continue with email</string>
    <string name="continueWithNumber">Continue with phone number</string>
    <string name="continueWithLinkedIn">Continue with LinkedIn</string>
    <string name="weDoNotShare">By continuing, you agree to ours terms and policies.</string>
    <string name="termsOfService"><u>Terms of Service</u></string>
    <string name="crop_text">Crop</string>
    <string name="error_image_loading">Error while loading Image, Please try again</string>
    <string name="ok_text">OK</string>
    <string name="camera_gallery_permission_text">For using camera and gallery, you need to enable camera and storage permission in your settings.</string>
    <string name="location_permission_text">For using app feature, you need to enable location permission in your settings.</string>
    <string name="proceed_text">Proceed</string>
    <string name="exit_text">Exit</string>
    <string name="do_you_want_to_logout_text">Do you really want to logout?</string>
    <string name="account_exist">Account is already exist with this email id</string>
    <string name="yes_text">Yes</string>
    <string name="cancel_text">Cancel</string>
    <string name="addPhotos">Add photos. Please add at least one clear photo of yourself.</string>
    <string name="continue_txt">Continue</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="my_email">My email is</string>
    <string name="verify_txt">Verify</string>
    <string name="verify_profile">Verify Profile</string>
    <string name="resend">RESEND CODE</string>
    <string name="reset"><u>Reset</u></string>
    <string name="enter_code">Enter Code</string>
    <string name="verification_code">Verification Code</string>
    <string name="skip">Skip</string>
    <string name="firstName">First Name</string>
    <string name="myNameIs">My name is</string>
    <string name="ageAbove18Text">You are not between the age limit for Swift Dating the minimum age requirement is 18 years old and Maximum age requirement is 80 years old.</string>
    <string name="selectValidDateText">Select a valid date</string>
    <string name="myBirthdayIs">My birthday is</string>
    <string name="aboutYourself">Introduce yourself</string>
    <string name="cityQuestion">What city do you live in?</string>
    <string name="cityHint">Enter the city you live in</string>
    <string name="never">Never</string>
    <string name="often">Often</string>
    <string name="socially">Socially</string>
    <string name="smoke_ques">Do you smoke?</string>
    <string name="drink_ques">Do you drink?</string>
    <string name="education_level">What is your highest level of education?</string>
    <string name="my_ethnicity_is">My Ethnicity is</string>
    <string name="i_identify_as">I identify as</string>
    <string name="mans">Man</string>
    <string name="women">Woman</string>
    <string name="man">Male</string>
    <string name="Woman">Female</string>
    <string name="other">Other</string>
    <string name="showMeToMen">Show me to men</string>
    <string name="showMeToWomen">Show me to Women</string>
    <string name="everyone">Everyone</string>
    <string name="Women">Women</string>
    <string name="men">Men</string>
    <string name="showMe">Show me</string>
    <string name="heightQues">What is your height? </string>
    <string name="kids_ques">Do you have kids?</string>
    <string name="what_is_sign">What is your sign?</string>
    <string name="jobTitle">Enter your occupation</string>
    <string name="myJobTitleIs">What is your occupation?</string>
    <string name="facebook_app_id">2841062159443728</string>
    <string name="fb_login_protocol_scheme">fb2749591848461723</string>
    <string name="notification_channel_id">Swift_01</string>
    <string name="notification_channel_name">Swift_app</string>
    <string name="send_text">Send</string>
    <string name="my_email_is">My email is</string>
    <string name="youhaveamatch">You have a match!</string>
    <string name="youhave48">It’s a match! You and %1$s have 72 hours to get to know each other.</string>
    <string name="answer_now">Chat Now</string>
    <string name="my_card">Profile Preview</string>
    <string name="question_headings">Skip the small talk! Enter three questions of your choice that your matches will answer.Your questions are a way to learn more about your match.Be creative fun and keep it interesting</string>
    <string name="welcome_to_app">Welcome to</string>
    <string name="welcome_to_app_desc">Swift is the dating app designed to connect faster. We are focused on people actually connecting. We know you are tired of swiping all day and collecting matches but never truly connecting so we give matches 72 hours to make a connection and move things to real life.</string>
    <string name="what_makes_txt_1">All matches have 72 hours to get to know each other</string>
    <string name="what_makes_txt_2">More completed profiles than other apps</string>
    <string name="what_makes_txt_3">Search for people and find your true match.</string>
    <string name="what_makes_txt_4">Send Direct Messages</string>
    <string name="terms">By using SWIFT, you agree to our </string>
    <string name="terms2"> terms &amp; policies.</string>
    <string name="process">Process</string>
    <string name="what_makes_txt">What makes Swift different?</string>
    <string name="process_desc">Swipe Match Set a date within 48 hours.Talk Exchange Contacts\n
        You can unmatch any step of the way.Please remember to be yourself,be friendly and date Safely.</string>
    <string name="i_understand">I Understand</string>
    <string name="done_txt">Done</string>
    <string name="superlikeToken">Crush Tokens</string>
    <string name="superLike5">5 Crush Tokens - $6.99</string>
    <string name="superLike25">SAVE 20%\n  25 Crush Tokens - $27.99</string>
    <string name="superLike50">SAVE 28%\n  50 Crush Tokens - $49.99</string>
    <string name="timeExtend1">1 Time Token - $0.99</string>
    <string name="timeExtend3">SAVE 20%\n3 Time Tokens - $1.99 </string>
    <string name="timeExtend5">SAVE 28%\n5 Time Tokens - $2.99</string>
    <string name="premium1month">1 month - $9.99</string>
    <string name="premium6month">SAVE 16%\n6 months - $29.99 </string>
    <string name="premium12month">SAVE 33%\n12 months - $49.99 </string>
    <string name="superLikeTerms">By clicking Continue, your payment will be charged to your Google Play account. Subscriptions will automatically renew for the same package length unless auto-renew is turned off and you cancel at least 24 hours before the end of the current period. By clicking Continue, you also agree to our Terms and Privacy Policy.</string>
    <string name="non_refundable">\nAll purchases are final and are non-refundable.</string>
    <string name="settings">Settings</string>
    <string name="btn_not_now">Not now</string>
    <string name="btn_continue">Continue</string>
    <string name="submit">Submit</string>
    <string name="profileedit">Edit Profile</string>
    <string name="done">Done</string>
    <string name="basic_info">Basic Info</string>
    <string name="dragndrop">Drag and drop image to rearrange</string>
    <string name="aboutme">About Me</string>
    <string name="workneducation">Work and Education</string>
    <string name="instagram">Instagram</string>
    <string name="tv_showpics">Show more photos of yourself by connecting your instagram. Your username won\'t be visible.</string>
    <string name="connect_with_insta">Connect with Instagram</string>
    <string name="add">Add</string>
    <string name="politics">Political Views</string>
    <string name="ethinicity">Ethinicity</string>
    <string name="exercise">Exercise</string>
    <string name="smoke">Smoke</string>
    <string name="drink">Drink</string>
    <string name="kids">Kids</string>
    <string name="height">Height</string>
    <string name="no_match_found">You have seen everyone within your criteria. Widen your search criteria or check back soon.\n Upgrade to Premium to search for users and send unlimited direct messages. Even to users you have skipped.</string>
    <string name="open_filters">Open Filters</string>
    <string name="add_Premium">Get Unlimited Profile Views, Send Unlimited Likes,</string>
    <string name="no_ad_text">Rewind Profiles &amp; Hide Ads</string>
    <string name="videe_premium">BlackGentry Premium</string>
    <string name="no_ad_text_delux">Premium Features Plus See Who Likes You, Send Direct Messages, See Second Chance and Change Your Location</string>
    <string name="videe_delux">BlackGentry Deluxe</string>
    <string name="propose_tym">Propose Now</string>
    <string name="basic_information">Basic Information</string>
    <string name="location">Location</string>
    <string name="currentlocation">Current Location</string>
    <string name="maxDistance">Maximum Distance</string>
    <string name="logout">Logout</string>
    <string name="agerange">Age Range</string>
    <string name="hideProfile">Show my profile on Swift</string>
    <string name="notification">Notifications</string>
    <string name="newMatches">New Matches</string>
    <string name="calls">Call Reminders</string>
    <string name="contactUs">Help</string>
    <string name="helpnsupport">Contact &amp; FAQ</string>
    <string name="rateUs">Rate Us</string>
    <string name="legal">Terms and Policies</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="licence">Licenses</string>
    <string name="sharevidee">Refer a friend</string>
    <string name="agree">I agree</string>
    <string name="expiring_matches">Expiring Matches</string>
    <string name="match_update">New Messages</string>
    <string name="terms_n_service">Terms of Service</string>
    <string name="delete_account"><u>Delete Account</u></string>
    <string name="report">Report</string>
    <string name="reportuser">Report User</string>
    <string name="unmatch">Unmatch/Block</string>
    <string name="new_matches_text">New Matches</string>
    <string name="schedule_matches_text">Messages</string>
    <string name="do_you_want_to_delete_text">Are you sure you want to delete your account? If you delete
        your account, subscription cannot be restored.</string>
    <string name="miles">Miles</string>
    <string name="shareContact">Share Contact</string>
    <string name="reasontoReport">Enter reason to report</string>
    <string name="religion_ques">What is your religion?</string>
    <string name="politics_ques">What are your political views?</string>
    <string name="exercise_ques">Do you exercise?</string>
    <string name="sometimes">Sometimes</string>
    <string name="almostnever">Almost Never</string>
    <string name="pet_ques">Do you  have pets?</string>
    <string name="both">Both</string>
    <string name="lookingForQuest">I am looking for</string>
    <string name="ambitionques">What are your interests, passions or hobbies?</string>
    <string name="pets">Pets</string>
    <string name="sign">Sign</string>
    <string name="my_shoolname_is">Where did you go to school?</string>
    <string name="schoolname">School Name</string>
    <string name="religion">Religion</string>
    <string name="socket_not_connected_text">Socket Not Connected</string>
    <string name="type_your_message_text">Type your message…</string>
    <string name="declined_text">Declined</string>
    <string name="accepted_text">Accepted</string>
    <string name="waiting_for_response_text">Waiting For Response</string>
    <string name="cancelled_text">Cancelled</string>
    <string name="user_invited_you_on_a_date_text">%1$s invited you on a date!</string>
    <string name="you_accepted_declined_user_date_text">You %1$s’s Date!</string>
    <string name="and"> &amp;</string>
</resources>