<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbg">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/appiconwhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_button_fb"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/facebookbtn"
        android:minWidth="@dimen/_200sdp"
        android:backgroundTint="@color/white"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppName">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:text="@string/loginWithFb"
            android:textAllCaps="false"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--create_linkedin--><!--create_account_with_num-->
    <Button
        android:id="@+id/create_account"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btnwhiteborder"
        android:fontFamily="@font/medium"
        android:minWidth="@dimen/_200sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/continueWithEmail"
        android:textAllCaps="false"
        android:visibility="gone"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppName" />

    <Button
        android:id="@+id/create_account_with_num"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btnwhiteborder"
        android:fontFamily="@font/medium"
        android:minWidth="@dimen/_200sdp"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/continueWithNumber"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button_fb" />

    <!--<TextView
        android:id="@+id/create_account"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/btnwhiteborder"
        android:backgroundTint="@color/transparent"
        android:fontFamily="@font/medium"
        android:minWidth="@dimen/_200sdp"
        android:gravity="center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp"

        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintLeft_toLeftOf="@id/create_linkedin"
        app:layout_constraintRight_toRightOf="@id/create_linkedin"
        app:layout_constraintTop_toBottomOf="@id/create_linkedin" />-->
    <TextView
        android:id="@+id/tvRule1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/medium"
        android:gravity="center"
        android:text="@string/weDoNotShare"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_with_num" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRule1">

        <TextView
            android:id="@+id/tvTermOfService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/termsOfService"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/and"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toEndOf="@id/tvTermOfService"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/privacy_policy"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toEndOf="@id/tvAnd"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>